--- a/.gitignore
+++ b/.gitignore
@@ -327,3 +327,324 @@ maelstrom/
 *.class
 # erlang stuff
 *.beam 
+
+#why3 
+*.tmp
+*~
+*.bak
+*.o
+*.a
+why3.conf
+*.cmx
+*.cmo
+*.cmi
+*.cmt
+*.cmti
+*.cmxs
+*.cma
+*.cmxa
+*.cmt
+*.cmti
+*.annot
+*.dep
+*.vo
+*.vd
+*.vok
+*.vos
+*.glob
+.*.aux
+*.elc
+*.summary
+.merlin
+\#*\#
+.depend.gnat
+
+# /
+/config.status
+/config.log
+/autom4te.cache
+/Makefile
+/configure
+/install-sh
+/semantic.cache
+/TAGS
+/output_why3
+/output_coq
+/dep.pdf
+/distrib
+/why3regtests.err
+/why3regtests.out
+/src/jessie/.merlin
+/_build
+/public
+
+# /bench/
+/bench/extraction/test/test.*
+/bench/extraction/test/main.opt
+/bench/programs/good/booleans/
+/bench/programs/good/exceptions/
+/bench/programs/good/for/
+/bench/programs/good/list/
+/bench/programs/good/see/
+/bench/programs/good/set/
+/bench/programs/good/recfun/
+/bench/programs/good/loops/
+/bench/programs/good/po/
+/bench/valid/list/
+/bench/ce/*.out
+/bench/infer/*.out
+/bench/check-ce/*.out
+/bench/parsing/bad/*.out
+/examples/tests/*.out
+
+# /bin/
+/bin/why3.byte
+/bin/why3.opt
+/bin/why3
+/bin/isabelle_client.opt
+/bin/isabelle_client.byte
+/bin/isabelle_client
+/bin/gnatwhy3.opt
+/bin/gnatwhy3.byte
+/bin/gnat_server.opt
+/bin/gnat_server.byte
+
+# /doc/
+/doc/*whizzy*
+/doc/generated/
+/doc/html/
+/doc/latex/
+/doc/apidoc.tex
+/doc/apidoc/
+/doc/stdlibdoc/
+/doc/_build
+/doc/.doctrees/
+
+/public/
+
+# /lib
+/lib/why3-cpulimit
+/lib/why3-cpulimit.exe
+/lib/why3cpulimit
+/lib/why3cpulimit.exe
+/lib/why3server
+/lib/why3server.exe
+
+# /lib/why3/
+/lib/why3/META
+
+# /share/
+/share/emacs/semantic.cache
+/share/Makefile.config
+/share/drivers
+/share/stdlib
+
+# /src/
+/src/config.sh
+
+# Coq
+/lib/coq/version
+
+# PVS
+.pvscontext
+orphaned-proofs.prf
+/lib/pvs/version
+/lib/pvs/*/*.summary
+pvsbin/
+
+# Isabelle
+/lib/isabelle/bool/
+/lib/isabelle/int/
+/lib/isabelle/number/
+/lib/isabelle/list/
+/lib/isabelle/map/
+/lib/isabelle/real/
+/lib/isabelle/set/
+/lib/isabelle/Why3_BV.thy
+/lib/isabelle/Why3_Map.thy
+/lib/isabelle/why3.ML
+/lib/isabelle/last_build
+/lib/isabelle/bv
+
+# /src/core/
+/src/core/parser_tokens.ml
+/src/core/parser_tokens.mli
+
+# /src/driver/
+/src/driver/driver_lexer.ml
+/src/driver/driver_parser.ml
+/src/driver/driver_parser.mli
+/src/driver/driver_parser.conflicts
+/src/driver/sexp.ml
+/src/driver/sexp.mli
+
+# /src/parser/
+/src/parser/lexer.ml
+/src/parser/parser.ml
+/src/parser/parser.mli
+/src/parser/parser.conflicts
+/src/parser/handcrafted.messages.temp
+/src/parser/parser_messages.ml
+
+# /src/why3doc/
+/src/why3doc/doc_lexer.ml
+
+# /src/util/
+/src/util/config.ml
+/src/util/dynlink_wrapper.ml
+/src/util/lexlib.ml
+/src/util/rc.ml
+/src/util/re.ml
+/src/util/json_lexer.ml
+/src/util/json_parser.mli
+/src/util/json_parser.ml
+/src/util/json_parser.conflicts
+/src/util/mlmpfr_wrapper.ml
+/src/util/mysexplib.ml
+/src/util/ppx_debug_optim
+
+# /src/session
+/src/session/xml.ml
+/src/session/compress.ml
+/src/session/strategy_parser.ml
+
+# /src/tools
+/src/tools/why3wc.ml
+/src/tools/why3pp_sexp.ml
+/src/tools/build
+
+# /src/ide
+/src/ide/gtkcompat.ml
+/src/ide/why3_js.byte
+/src/ide/why3_js.js
+
+# /plugins/tptp/
+/plugins/tptp/tptp_lexer.ml
+/plugins/tptp/tptp_parser.ml
+/plugins/tptp/tptp_parser.mli
+/plugins/tptp/tptp_parser.conflicts
+/plugins/parser/dimacs.ml
+
+# /plugins/python/
+/plugins/python/py_lexer.ml
+/plugins/python/py_parser.ml
+/plugins/python/py_parser.mli
+/plugins/python/test/
+/plugins/python/py_parser.conflicts
+
+# /plugins/microc/
+/plugins/microc/mc_lexer.ml
+/plugins/microc/mc_parser.ml
+/plugins/microc/mc_parser.mli
+/plugins/microc/test/
+/plugins/microc/mc_parser.conflicts
+
+# /plugins/ada_terms
+/plugins/ada_terms/ada_lexer.ml
+/plugins/ada_terms/ada_parser.ml
+/plugins/ada_terms/ada_parser.mli
+
+# /plugins/cfg/
+/plugins/cfg/cfg_lexer.ml
+/plugins/cfg/cfg_parser.ml
+/plugins/cfg/cfg_parser.mli
+/plugins/cfg/cfg_parser.conflicts
+
+# /drivers
+/drivers/coq-realizations.aux
+/drivers/pvs-realizations.aux
+/drivers/isabelle-realizations.aux
+
+# /tests/
+/tests/test-jcf/
+/tests/test-pgm-jcf/
+/tests/test-claude/
+/tests/test-and/
+/tests/python/*/why3session.xml
+/tests/python/*/why3shapes.gz
+/tests/microc/*/why3session.xml
+/tests/microc/*/why3shapes.gz
+
+# /examples/
+/examples/use_api/results
+/examples/in_progress/course/
+/examples/in_progress/wcet_hull/
+/examples/in_progress/binary_search2/
+/examples/in_progress/binary_search_c/
+/examples/in_progress/vacid_0_red_black_trees_harness/
+/examples/why3bench.html
+/examples/why3regtests.err
+/examples/why3regtests.out
+/examples/*/*.opt
+/examples/*/*.byte
+/examples/in_progress/*/*.opt
+/examples/in_progress/*/*.byte
+/examples/*.html
+/examples/*/*.html
+!/examples/*/index.html
+/examples/*/*/*.html
+!/examples/*/*/index.html
+/examples/*/*/*/*.html
+!/examples/*/*/*/index.html
+/examples/style.css
+/examples/*/style.css
+/examples/*/*/style.css
+/examples/*/*/*/style.css
+/examples/*/*.tex
+/examples/*/*/*.tex
+/examples/*/*/*/*.tex
+/examples/vstte10_max_sum/vstte10_max_sum.ml
+/examples/euler001/euler001.ml
+/examples/sudoku/sudoku.ml
+/examples/sudoku/jsmain.js
+/examples/in_progress/sudoku_reloaded/*__*.ml
+/examples/in_progress/sudoku_reloaded/jsmain.js
+/examples/gcd/euclideanAlgorithm63.ml
+/examples/gcd/jsmain.js
+/examples/defunctionalization/defunctionalization.ml
+/examples/vstte12_combinators/jsmain.js
+/examples/vstte12_combinators/vstte12_combinators.ml
+/examples/in_progress/bigInt/jsmain.js
+/examples/in_progress/bigInt/*__*.ml
+/examples/in_progress/mp/jsmain.js
+/examples/in_progress/mp/*__*.ml
+/examples/prover/.depend
+/examples/prover/prover
+/examples/prover/prover.ml
+/examples/prover/bench/*/*.out
+/examples/prover/bench/*/*.txt
+/examples/prover/bench1
+/examples/prover/bench2
+/examples/prover/macro_generator/depend
+/examples/prover/macro_generator/build
+
+# Try Why3
+/src/trywhy3/trywhy3.byte
+/src/trywhy3/trywhy3.js
+/src/trywhy3/trywhy3.map
+/src/trywhy3/why3_worker.byte
+/src/trywhy3/why3_worker.js
+/src/trywhy3/why3_worker.map
+/src/trywhy3/json_*.ml
+/src/trywhy3/index.en.html
+/src/trywhy3/index.fr.html
+/src/trywhy3/index.html
+/src/trywhy3/ace-builds/
+/src/trywhy3/*.png
+/src/trywhy3/alt-ergo*
+/src/trywhy3/fontawesome/
+
+# IDE
+/src/ide/fontawesome
+/src/ide/ace-builds
+
+# jessie3
+/src/jessie/config.log
+/src/jessie/Makefile
+/src/jessie/literals.ml
+/src/jessie/tests/ptests_config
+/src/jessie/tests/basic/result/*.log
+/src/jessie/tests/demo/result/*.log
+
+/trash
+trywhy3.tar.gz
