SDGE : pl5 (tbc)

--- a/.gitignore
+++ b/.gitignore
@@ -665,3 +665,7 @@ Cargo.lock
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
+
+# maelstrom + python stuff
+__pycache__
+store
