--- a/1y/2s/psd/zmq_warm_up/Cargo.toml
+++ b/1y/2s/psd/zmq_warm_up/Cargo.toml
@@ -3,7 +3,24 @@ name = "zmq_warm_up"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "c"
+path = "src/c.rs"
+
+[[bin]]
+name = "s"
+path = "src/s.rs"
+
+[[bin]]
+name = "f"
+path = "src/f.rs"
+
+[[bin]]
+name = "g"
+path = "src/g.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 zmq = "0.9"
+byteorder = "1.4.3"
