Update readme + remove single gitignore (now there are multiple ones).

--- a/1y/2s/vf/tla/AB.toolbox/.project
+++ b/1y/2s/vf/tla/AB.toolbox/.project
@@ -23,7 +23,7 @@
 		<link>
 			<name>ABSpec.tla</name>
 			<type>1</type>
-			<location>/home/vaavaav/MEI/1y/2s/vf/tla/ABSpec.tla</location>
+			<locationURI>PARENT-1-PROJECT_LOC/ABSpec.tla</locationURI>
 		</link>
 	</linkedResources>
 </projectDescription>
