--- a/1y/2s/vf/tla/PaxosCommit.toolbox/.project
+++ b/1y/2s/vf/tla/PaxosCommit.toolbox/.project
@@ -23,7 +23,7 @@
 		<link>
 			<name>tcommit.tla</name>
 			<type>1</type>
-			<location>/home/vaavaav/MEI/1y/2s/vf/tla/tcommit.tla</location>
+			<locationURI>PARENT-1-PROJECT_LOC/tcommit.tla</locationURI>
 		</link>
 	</linkedResources>
 </projectDescription>
